[draft] add flags to optimize Minecraft server (from flags.sh)